--- a/app/views/welcome/_rooms_list.html.erb
+++ b/app/views/welcome/_rooms_list.html.erb
@@ -6,80 +6,98 @@
 		<%= f.input :user_id, :as => :hidden, :input_html => {:value => ""} %>
 		<%= f.input :room_id, :as => :hidden, :input_html => {:id => 'room_id',:value => ""}  %>
 	<% if (data[:response] == "OK") %>
-		<div>
+		<div class="container">
 			Total Rooms available: <%= data[:total_rooms_available]%>
 		</div>
+		<div class="container">
+		<div class="row">
     <% if (data.key?(:deluxe_rooms_available)) %>
-    	<div>
+    	<div class="col-md-6">
     		Deluxe Rooms available: <%= data[:deluxe_rooms_available]%>
     	</div>  
 			<% obj = JSON.parse(data[:deluxe_room]) %>
-			<div>
+			<div class="col-md-6">
 				Room Description: <%= obj["description"]%>  Rate: <%= obj["price_per_night"]%>/night
 			</div>
+			</div>
 			<% rooms = JSON.parse(data[:deluxe_rooms]) %>
+			<div class="row">
 			<% for room in rooms %>
-				<div id="donate">
+				<div id="donate" class="col-sm-2">
 				<label class="blue">
 				<input type="radio" name="toggle" value="<%= room['id']%>">
 				<span><%= room["number"] %></span>
 				</label>
 				</div>
 			<% end %> 
+			</div>
 		<% end %>
+		<div class="row">
     <% if (data.key?(:luxury_rooms_available)) %>
-    	<div>
-    		Deluxe Rooms available: <%= data[:luxury_rooms_available]%>
+    	<div class="col-md-6">
+    		Luxury Rooms available: <%= data[:luxury_rooms_available]%>
     	</div>  
 			<% obj = JSON.parse(data[:luxury_room]) %>
-			<div>
+			<div class="col-md-6">
 				Room Description: <%= obj["description"]%>  Rate: <%= obj["price_per_night"]%>/night
 			</div>
+			</div>
 			<% rooms = JSON.parse(data[:luxury_rooms]) %>
+			<div class="row">
 			<% for room in rooms %>
-				<div id="donate">
+				<div id="donate" class="col-sm-2">
 				<label class="pink">
 				<input type="radio" name="toggle" value="<%= room['id']%>">
 				<span><%= room["number"] %></span>
 				</label>
 				</div>
 			<% end %> 
+			</div>
 		<% end %>
+		<div class="row">
     <% if (data.key?(:luxury_suites_available)) %>
-    	<div>
-    		Deluxe Rooms available: <%= data[:luxury_suites_available]%>
+    	<div class="col-md-6">
+    		Luxury Suites available: <%= data[:luxury_suites_available]%>
     	</div>  
 			<% obj = JSON.parse(data[:luxury_suite]) %>
-			<div>
+			<div class="col-md-6">
 				Room Description: <%= obj["description"]%>  Rate: <%= obj["price_per_night"]%>/night
 			</div>
+			</div>
 			<% rooms = JSON.parse(data[:luxury_suites]) %>
+			<div class="row">
 			<% for room in rooms %>
-				<div id="donate">
+				<div id="donate" class="col-sm-2">
 				<label class="green">
 				<input type="radio" name="toggle" value="<%= room['id']%>">
 				<span><%= room["number"] %></span>
 				</label>
 				</div>
 			<% end %> 
+			</div>
 		<% end %>
+		<div class="row">
     <% if (data.key?(:presidential_suites_available)) %>
-    	<div>
-    		Deluxe Rooms available: <%= data[:presidential_suites_available]%>
+    	<div class="col-md-6">
+    		Presidential Suites available: <%= data[:presidential_suites_available]%>
     	</div>  
 			<% obj = JSON.parse(data[:presidential_suite]) %>
-			<div>
+			<div class="col-md-6">
 				Room Description: <%= obj["description"]%>  Rate: <%= obj["price_per_night"]%>/night
 			</div>
+			</div>
 			<% rooms = JSON.parse(data[:presidential_suites]) %>
+			<div class="row">
 			<% for room in rooms %>
-				<div id="donate">
+				<div id="donate" class="col-sm-2">
 				<label class="purple">
 				<input type="radio" name="toggle" value="<%= room['id']%>">
 				<span><%= room["number"] %></span>
 				</label>
 				</div>
-			<% end %> 
+			<% end %>
+			</div>
+			</div> 
 		<% end %>
 		<% else %>
 		<div>
