--- a/app/views/welcome/_rooms_list.html.erb
+++ b/app/views/welcome/_rooms_list.html.erb
@@ -105,7 +105,9 @@
 		</div>
   <% end %>
   <%if logged_in? %>
+  <div class="center row">
       <%= f.submit "Book Your Room", class: "btn btn-primary" %>
+      </div>
       <% end %>
     <% end %>
     <script type="text/javascript">
