--- a/app/views/welcome/_rooms_list.html.erb
+++ b/app/views/welcome/_rooms_list.html.erb
@@ -6,18 +6,18 @@
 		<%= f.input :user_id, :as => :hidden, :input_html => {:value => ""} %>
 		<%= f.input :room_id, :as => :hidden, :input_html => {:id => 'room_id',:value => ""}  %>
 	<% if (data[:response] == "OK") %>
-		<div class="container">
-			Total Rooms available: <%= data[:total_rooms_available]%>
+		<div class="container" style="font-size: 30px;">
+			Rooms available: <%= data[:total_rooms_available]%>
 		</div>
 		<div class="container">
 		<div class="row">
     <% if (data.key?(:deluxe_rooms_available)) %>
-    	<div class="col-md-6">
-    		Deluxe Rooms available: <%= data[:deluxe_rooms_available]%>
+    	<div class="col-md-6" style="text-align: left;font-size: 20px;">
+    		Deluxe Rooms(<%= data[:deluxe_rooms_available]%>)
     	</div>  
 			<% obj = JSON.parse(data[:deluxe_room]) %>
-			<div class="col-md-6">
-				Room Description: <%= obj["description"]%>  Rate: <%= obj["price_per_night"]%>/night
+			<div class="col-md-6" style="text-align: right;font-size: 15px;">
+				<%= obj["description"]%>  Rate: ₹ <%= obj["price_per_night"]%>/night
 			</div>
 			</div>
 			<% rooms = JSON.parse(data[:deluxe_rooms]) %>
@@ -34,12 +34,12 @@
 		<% end %>
 		<div class="row">
     <% if (data.key?(:luxury_rooms_available)) %>
-    	<div class="col-md-6">
-    		Luxury Rooms available: <%= data[:luxury_rooms_available]%>
+    	<div class="col-md-6" style="text-align: left;font-size: 20px;">
+    		Luxury Rooms(<%= data[:luxury_rooms_available]%>)
     	</div>  
 			<% obj = JSON.parse(data[:luxury_room]) %>
-			<div class="col-md-6">
-				Room Description: <%= obj["description"]%>  Rate: <%= obj["price_per_night"]%>/night
+			<div class="col-md-6" style="text-align: right;font-size: 15px;">
+				<%= obj["description"]%>  Rate: ₹ <%= obj["price_per_night"]%>/night
 			</div>
 			</div>
 			<% rooms = JSON.parse(data[:luxury_rooms]) %>
@@ -56,12 +56,12 @@
 		<% end %>
 		<div class="row">
     <% if (data.key?(:luxury_suites_available)) %>
-    	<div class="col-md-6">
-    		Luxury Suites available: <%= data[:luxury_suites_available]%>
+    	<div class="col-md-6" style="text-align: left;font-size: 20px;">
+    		Luxury Suites(<%= data[:luxury_suites_available]%>)
     	</div>  
 			<% obj = JSON.parse(data[:luxury_suite]) %>
-			<div class="col-md-6">
-				Room Description: <%= obj["description"]%>  Rate: <%= obj["price_per_night"]%>/night
+			<div class="col-md-6" style="text-align: right;font-size: 15px;">
+				<%= obj["description"]%>  Rate: ₹ <%= obj["price_per_night"]%>/night
 			</div>
 			</div>
 			<% rooms = JSON.parse(data[:luxury_suites]) %>
@@ -78,12 +78,12 @@
 		<% end %>
 		<div class="row">
     <% if (data.key?(:presidential_suites_available)) %>
-    	<div class="col-md-6">
-    		Presidential Suites available: <%= data[:presidential_suites_available]%>
+    	<div class="col-md-6" style="text-align: left;font-size: 20px;">
+    		Presidential Suites(<%= data[:presidential_suites_available]%>)
     	</div>  
 			<% obj = JSON.parse(data[:presidential_suite]) %>
-			<div class="col-md-6">
-				Room Description: <%= obj["description"]%>  Rate: <%= obj["price_per_night"]%>/night
+			<div class="col-md-6" style="text-align: right;font-size: 15px;">
+				<%= obj["description"]%>  Rate: ₹ <%= obj["price_per_night"]%>/night
 			</div>
 			</div>
 			<% rooms = JSON.parse(data[:presidential_suites]) %>
