--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,5 +20,6 @@
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
+    <p>Already registered? <%= link_to "Login!", login_path %></p>
   </div>
 </div>
