--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -5,7 +5,7 @@
     Book room in your city for best price.
   </h2>
   <% unless logged_in? %>
-  	<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  	<%= link_to "Sign up now for Booking!", signup_path, class: "btn btn-lg btn-primary" %>
   <% end %>
   	<%= form_tag("/get_available_rooms", remote: true, id: "get_room_form", :method => :get) do |f| %>
       <table class="table">
